Bump plugin-api to 4.1.4